------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

July 31 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Opening book cases is easier (just walk towards one)

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Adjusted Legifer's, Cleptia's, Nefas's and Infuscor's pray effects somewhat

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mistress' weaponskill increased
	
July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Corrected a fatal bug in the dig code
	* Fixed a small bug in the consuming code which could create fleshless
	  holy bananas
	* Removed a tiny abusable bug in the teleport control code
	* Broken thunder hammers no longer emit light
	* Eliminated a minor bug in the clone experience behaviour
	* Destroyed an ugly bug that occurred when teleporting vesana

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Stupidity in my bug correction (zombies eating headless) corrected
	
July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Entering Corey's dungeon is now more difficult

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Action system implemented in a slightly different way, which corrects
	  some strange bugs appearing when eating multi-tiled corpses

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Temporary states (such as poisoned) are deactivated when monster is resurrected. 

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Pets and player killed monsters are no longer handled seperatly for score calculation
	* Bug with digging earth tiles 

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
