@@ -287,6 +287,7 @@ class game
   static void CreateBusyAnimationCache();
   static long GetScore();
   static void SetMoveType(uchar What) { MoveType = What; }
+  static bool TweraifIsFree();
  private:
   static const char* const Alignment[];
   static god** God;
