@@ -5,6 +5,3 @@ const char* terrain::MonsterSurviveMessage() const { return "somehow survives"; 
 const char* terrain::DeathMessage() const { return "strangely enough, you die"; }
 const char* terrain::MonsterDeathVerb() const { return "dies"; }
 const char* terrain::ScoreEntry() const { return "died on unfriendly terrain"; }
-
-
-
