@@ -7,6 +7,11 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+July 31 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
+
+	* Vladimir now changes color all the time
+	* The banana growers no longer defend Decos
+
 July 31 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Opening book cases is easier (just walk towards one)
